feat: add maxPermittedCouponPercentagemax to edit and list routes
